--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -26,9 +26,9 @@
 	
 	"infotext_header"								"INFODUMP HO"
 	"infotext_subheader_1"							"Combat Links & Unbalancing"
-	"infotext_text_1"								"<p>Moving close to an allied hero will form a Combat Link with them, allowing you to Unbalance enemies by dealing damage.</p><p>Unbalanced enemies are vulnerable to Enhanced versions of your abilities (crafts), as well as your ultimate (s-craft).</p>"
+	"infotext_text_1"								"<p>Moving close to an allied hero will form a Combat Link with them, allowing you to Unbalance enemies by dealing damage.</p><p>Unbalanced enemies are vulnerable to Enhanced versions of your abilities (crafts).</p>"
 	"infotext_subheader_2"							"Crafts, Craft Points & S-Crafts"
-	"infotext_text_2"								"<p>Your hero's abilities cost CP (Craft Points) to use, which is earned by dealing and taking damage.</p><p>Regular crafts can be used at any time provided you have sufficient CP, but S-Crafts require an opponent to be Unbalanced first.</p>"
+	"infotext_text_2"								"<p>Your hero's abilities cost CP (Craft Points) to use, which is earned by dealing and taking damage.</p><p>Regular crafts have set CP costs; S-Crafts spend all of your CP at once (minimum 100), but become even stronger at 200 CP.</p><p>All crafts cause you some amount of Delay -- their cooldowns apply to all of your crafts at once, preventing anything from being cast for a time.</p>"
 	"infotext_subheader_3"							"Other Misc Shit"
 	"infotext_text_3"								"<p>The objective of the game is to kill all enemy heroes each round -- there are no creeps, towers, or shops.</p><p>In the middle of the map, there is a CP fountain -- if your team has uncontested control of it for 5 seconds, it will begin to rapidly grant CP to any allies within.</p><p>The first team to win 5 rounds wins the game.</p>"
 
@@ -55,9 +55,9 @@
 
 	"HeroSelect_Passive"							"ARCUS Ability"
 	"HeroSelect_Abilities"							"Crafts"
-	"HeroSelect_Crafts_Tooltip"						"A hero's basic abilities, which cost Craft Points to cast. Have no cooldown and are all learned at level 1."
+	"HeroSelect_Crafts_Tooltip"						"A hero's basic abilities, which cost Craft Points to cast. They are all learned at level 1."
 	"HeroSelect_Scraft"								"S-Craft"
-	"HeroSelect_Scraft_Tooltip"						"A hero's ultimate craft, only usable with the help of a combat-linked ally."
+	"HeroSelect_Scraft_Tooltip"						"A hero's ultimate craft. Devastates enemies but costs all of a hero's CP."
 	"HeroSelect_Loading"							"Loading..."
 
 	//"npc_dota_hero_ember_spirit_Lore"				"The leader of Class VII. As a beginner in the Eight Leaves One Blade school of swordfighting, Rean uses powerful physical attacks to disrupt and elude enemies."
