--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -28,17 +28,20 @@
 	"infotext_subheader_1"							"Combat Links & Unbalancing"
 	"infotext_text_1"								"<p>Moving close to an allied hero will form a Combat Link with them, allowing you to Unbalance enemies by dealing damage.</p><p>Unbalanced enemies are vulnerable to Enhanced versions of your abilities (crafts).</p>"
 	"infotext_subheader_2"							"Crafts, Craft Points & S-Crafts"
-	"infotext_text_2"								"<p>Your hero's abilities cost CP (Craft Points) to use, which is earned by dealing and taking damage.</p><p>Regular crafts have set CP costs; S-Crafts spend all of your CP at once (minimum 100), but become even stronger at 200 CP.</p><p>All crafts cause you some amount of Delay -- their cooldowns apply to all of your crafts at once, preventing anything from being cast for a time.</p>"
+	"infotext_text_2"								"<p>Your hero's abilities cost CP (Craft Points) to use, which is earned by dealing and taking damage and slowly over time.</p><p>Regular crafts have set CP costs; S-Crafts spend all of your CP at once (minimum 100), but become even stronger at 200 CP.</p><p>All crafts cause you some amount of Delay -- their cooldowns apply to all of your crafts at once, preventing anything from being cast for a time.</p>"
 	"infotext_subheader_3"							"Other Misc Shit"
 	"infotext_text_3"								"<p>The objective of the game is to kill all enemy heroes each round -- there are no creeps, towers, or shops.</p><p>In the middle of the map, there is a CP fountain -- if your team has uncontested control of it for 5 seconds, it will begin to rapidly grant CP to any allies within.</p><p>The first team to win 5 rounds wins the game.</p>"
+
+	"infotext_text_secondary"						"Waiting to start the next round..."
+	"infotext_ok_secondary"							"Ready"
 
 	"preboss_nextboss_header"						"NEXT ENEMY"
 
 	"close"											"Close"
 	"infotext_ok"									"OK cool whatever reading sucks I want to play a video game"
-	"you_are_ready"									"videogames wooooooooo"
+	"you_are_ready"									"Waiting for other players to ready up..."
 
-	"quest_time_bossteleport"						"Encounter begins"
+	"quest_time_round_starting"						"Round starts"
 	"quest_time_reviving"							"Reviving"
 
 	"victory_lbl_time"								"Time Taken"
