--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -41,6 +41,7 @@
 	"infotext_ok"									"OK cool whatever reading sucks I want to play a video game"
 	"you_are_ready"									"Waiting for other players to ready up..."
 	"music_control_button"							"Toggle Music"
+	"current_turn_bonus"							"Current Turn Bonus:"
 
 	"quest_time_round_starting"						"Round starts"
 	"quest_time_reviving"							"Reviving"
