--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -69,6 +69,7 @@
 	"npc_dota_hero_ember_spirit_Lore"				"Rean is a nimble, aggressive swordfighter who uses powerful physical attacks to disrupt and elude enemies."
 	//"npc_dota_hero_windrunner_Lore"					"The heir to the Empire's largest industrial group, Alisa's technical knowledge and skill with the bow allow her to support her allies and devastate her enemies with wide-area magic effects."
 	"npc_dota_hero_windrunner_Lore"					"Alisa's technical knowledge and skill with the bow allow her to support her allies and devastate her enemies with wide-area magic effects."
+	"npc_dota_hero_sniper_Lore"						"Crow is a cocky, flexible gunslinger, adept in both physical combat and magic and fully comfortable leaving his and his enemies' fate up to chance."
 
 
 
