Added round recap feature

--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -43,6 +43,9 @@
 	"music_control_button"							"Toggle Music"
 	"current_turn_bonus"							"Current Turn Bonus:"
 
+	"round_recap_header"							"Round Recap (Damage Dealt)"
+	"round_recap_ready"								"Ready For Next Round"
+
 	"quest_time_round_starting"						"Round starts"
 	"quest_time_reviving"							"Reviving"
 
