Added status effects info page

--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -31,6 +31,15 @@
 	"infotext_text_2"								"<p>Your hero's abilities cost CP (Craft Points) to use, which is earned by dealing and taking damage and slowly over time.</p><p>Regular crafts have set CP costs; S-Crafts spend all of your CP at once (minimum 100), but become even stronger at 200 CP.</p><p>All crafts cause you some amount of Delay -- their cooldowns apply to all of your crafts at once, preventing anything from being cast for a time.</p>"
 	"infotext_subheader_3"							"Other Misc Shit"
 	"infotext_text_3"								"<p>The objective of the game is to kill all enemy heroes each round -- there are no creeps, towers, or shops.</p><p>In the middle of the map there is a zone which grants Turn Bonuses every 15 seconds -- if your team has uncontested control of it at any point while the Turn Bonus is active, it will grant the bonus to the closest member of your team.</p><p>The first team to win 5 rounds wins the game.</p>"
+	"trailspedia_header"							"Status Effects"
+	"trailspedia_insight"							"<b>Insight:</b> Evades an instance of physical damage once per second."
+	"trailspedia_passion"							"<b>Passion:</b> Rapidly regenerates CP."
+	"trailspedia_cp_boost"							"<b>CP Boost:</b> Increases all CP gained by 50%."
+	"trailspedia_freeze"							"<b>Freeze:</b> Causes all actions to be delayed by 0.6 seconds, and deals 10% of max HP in damage when the freeze ends."
+	"trailspedia_burn"								"<b>Burn:</b> Deals 3% of max HP in damage each second."
+	"trailspedia_confuse"							"<b>Confuse:</b> Causes the target to randomly attack nearby units."
+	"trailspedia_nightmare"							"<b>Nightmare:</b> Renders the target unable to act; when the nightmare ends, a random non-sleep debuff will be applied for 3 seconds. Ends early if damage is taken."
+	"trailspedia_deathblow"							"<b>Deathblow:</b> Causes the target to die instantly if they fall below 15% of max HP."
 
 	"infotext_text_secondary"						"Waiting to start the next round..."
 	"infotext_ok_secondary"							"Ready"
