--- a/game/dota_addons/trails/panorama/localization/addon_english.txt
+++ b/game/dota_addons/trails/panorama/localization/addon_english.txt
@@ -26,13 +26,13 @@
 	
 	"infotext_header"								"INFODUMP HO"
 	"infotext_subheader_1"							"Links, Unbalancing & Master Quartz"
-	"infotext_text_1"								"<p>Moving close to an allied hero will form a Combat Link with them, allowing you to <font color='#FE9A2E'>Unbalance</font> enemies by dealing damage. When you <font color='#FE9A2E'>Unbalance</font> an enemy, your linked ally's abilities (crafts) become <font color='#FE9A2E'>Enhanced</font>.</p><p>Each hero has a unique Master Quartz, which provides passive bonus effects as long as you're linked with an ally. Master Quartz automatically increase in power and gain new bonuses each round.</p>"
+	"infotext_text_1"								"<p>Approaching an allied hero will form a Combat Link, allowing you to <font color='#FE9A2E'>Unbalance</font> enemies by dealing damage. When you <font color='#FE9A2E'>Unbalance</font> an enemy, your linked ally's abilities (crafts) become <font color='#FE9A2E'>Enhanced</font>.</p><p>Each hero has a unique Master Quartz, which provides bonus effects if you're linked. Master Quartz increase in power and gain new bonuses each round.</p>"
 	"infotext_subheader_2"							"Crafts, Craft Points & S-Crafts"
-	"infotext_text_2"								"<p>Your hero's abilities each require a certain amount of accumulated CP (Craft Points) to use, which is primarily earned by dealing and taking damage.</p><p>Regular crafts normally don't cost any CP to cast, unless used repeatedly in short succession. S-Crafts always spend all of your CP (minimum 100), and gain additional effects at 200 CP.</p><p>All crafts cause you some amount of Delay -- their cooldowns apply to all of your crafts at once, preventing anything from being cast for a time.</p>"
+	"infotext_text_2"								"<p>Crafts use CP (Craft Points), primarily earned by dealing and taking damage.</p><p>Regular crafts normally don't cost any CP to cast, unless used repeatedly in short succession. S-Crafts always spend all your CP (minimum 100), and are improved at 200 CP.</p><p>All crafts cause you some amount of Delay - their cooldowns apply to all of your crafts at once.</p>"
 	"infotext_subheader_3"							"Quartz & Arts"
-	"infotext_text_3"								"<p>All items (quartz) in the game -- including your hero's starting Master Quartz -- can each cast a single Art, which cost mana and scale based on your hero's ATS stat. Normal quartz also grant passive stat bonuses. Quartz can only be bought in between rounds.</p>"
+	"infotext_text_3"								"<p>All items (quartz) -- including Master Quartz -- can each cast a single Art, which cost mana and scale on ATS. Normal quartz also grant passive stat bonuses. Quartz can only be bought between rounds.</p><p>Arts cause separate Delay from crafts, only applying to quartz.</p>"
 	"infotext_subheader_4"							"Game Mode: Tetracyclic Towers" 
-	"infotext_text_4"								"<p>The game is assymetrical and divided into rounds; the objective is to capture all towers on the map (by standing near them) in fewer rounds than the enemy. Rounds end when all attacking heroes are killed, the timer expires or a tower is successfully captured.</p>"
+	"infotext_text_4"								"<p>The game is assymetrical and divided into rounds; the objective is to capture all towers (by standing near them) in fewer rounds than the enemy. Rounds end when all attacking heroes are killed, the timer expires or a tower is captured.</p>"
 
 	"trailspedia_header"							"Status Effects"
 	"trailspedia_seal"								"<b>Seal:</b> Prevents attacking and craft use."
